# techinsight

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/commands/: audit.md  check.md  commit.md  pr.md
.claude/hooks/: format.sh
.claude/skills/add-api-endpoint/: SKILL.md
.claude/skills/add-migration/: SKILL.md
.claude/skills/reingest-csv/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: articles.py  search.py
backend/app/core/: config.py  db.py  deps.py
backend/app/models/: article.py
backend/app/repositories/: article.py
backend/app/schemas/: article.py
backend/app/scripts/: ingest_articles.py
backend/app/services/: articles.py  search.py
backend/app/services/embeddings/: __init__.py  base.py  factory.py  local.py  openai.py
backend/tests/: conftest.py  test_articles_api.py  test_embeddings.py  test_search.py
data/: articles.csv
docs/: IMPLEMENTATION_PLAN.md  api-design.md  db-design.md  development.md  requirements.md
frontend/: Dockerfile  biome.json  knip.json  package.json  placeholder-server.mjs
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: ArticleCard.tsx  ArticleForm.tsx  ArticleModal.tsx  Pagination.tsx  RelevanceMeter.tsx  SearchBar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx  textarea.tsx
frontend/lib/: relevance.ts  utils.ts
frontend/lib/api/: articles.ts  client.ts  types.ts
frontend/lib/hooks/: useArticleMutations.ts  useArticles.ts  useDebounce.ts  useSearch.ts
